[gd_scene load_steps=13 format=3 uid="uid://buxla4a3c3k2"]

[ext_resource type="Theme" uid="uid://bwgdrcgopd0s1" path="res://lobby/lobby_theme.tres" id="1_3qnx1"]
[ext_resource type="Script" uid="uid://cnbk17iq1x68f" path="res://ui/main_menu.gd" id="2_p6ygj"]
[ext_resource type="FontFile" uid="uid://c724ua42euj1f" path="res://assets/fonts/CinzelDecorative-Regular.ttf" id="3_5klac"]
[ext_resource type="Theme" uid="uid://dfrv1wv3x08o4" path="res://ui/menu.tres" id="3_lsdqh"]
[ext_resource type="Texture2D" uid="uid://33ggk1gl6k1j" path="res://assets/UI_KeyBoard/w.png" id="5_lsdqh"]
[ext_resource type="Texture2D" uid="uid://3v34pravi8vg" path="res://assets/UI_KeyBoard/a.png" id="6_jiymt"]
[ext_resource type="Texture2D" uid="uid://tpf1rs52dmem" path="res://assets/UI_KeyBoard/d.png" id="7_bgtsx"]
[ext_resource type="Texture2D" uid="uid://cxp6ov26sme22" path="res://assets/UI_KeyBoard/s.png" id="8_kaxbk"]
[ext_resource type="FontFile" uid="uid://cham44u3aocqe" path="res://assets/fonts/monogram.ttf" id="9_0nobx"]
[ext_resource type="Texture2D" uid="uid://dqalpjem33yj2" path="res://assets/UI_KeyBoard/esc.png" id="10_iyrh0"]
[ext_resource type="Texture2D" uid="uid://c4kkxwork0isp" path="res://assets/UI_KeyBoard/shift.png" id="11_8jgmr"]

[sub_resource type="LabelSettings" id="LabelSettings_lsdqh"]
font = ExtResource("3_5klac")
font_size = 100
font_color = Color(1, 0.745098, 0.352941, 1)
outline_size = 20
outline_color = Color(0, 0, 0, 1)
shadow_size = 12

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_3qnx1")
script = ExtResource("2_p6ygj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 655.0
offset_top = 269.0
offset_right = 1155.0
offset_bottom = 701.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_lsdqh")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="Host" type="Button" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_lsdqh")
text = "Host"

[node name="Join" type="Button" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_lsdqh")
text = "Join"

[node name="HowTo" type="Button" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_lsdqh")
text = "How to Play"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_lsdqh")
text = "Credits"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_lsdqh")
text = "Quit"

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 47.0
offset_top = 80.0
offset_right = 1194.0
offset_bottom = 312.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer3"]
layout_mode = 2
theme = ExtResource("3_lsdqh")
theme_type_variation = &"Title"
text = "Git Gud Dungeon"
label_settings = SubResource("LabelSettings_lsdqh")

[node name="How_to_play" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="How_to_play"]
layout_mode = 2
offset_left = 285.0
offset_top = 57.0
offset_right = 984.0
offset_bottom = 193.0
theme = ExtResource("3_lsdqh")
theme_type_variation = &"Title"
text = "How To Play"
label_settings = SubResource("LabelSettings_lsdqh")

[node name="Label2" type="Label" parent="How_to_play"]
layout_mode = 0
offset_left = 223.0
offset_top = 366.0
offset_right = 1114.0
offset_bottom = 442.0
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("9_0nobx")
theme_override_font_sizes/font_size = 95
text = "Actions Just for the Hero"

[node name="Movement" type="Node2D" parent="How_to_play"]
position = Vector2(659, 187)

[node name="W" type="Sprite2D" parent="How_to_play/Movement"]
position = Vector2(184, 342)
scale = Vector2(2, 2)
texture = ExtResource("5_lsdqh")

[node name="A" type="Sprite2D" parent="How_to_play/Movement"]
position = Vector2(110, 409)
scale = Vector2(2, 2)
texture = ExtResource("6_jiymt")

[node name="D" type="Sprite2D" parent="How_to_play/Movement"]
position = Vector2(259, 409)
scale = Vector2(2, 2)
texture = ExtResource("7_bgtsx")

[node name="S" type="Sprite2D" parent="How_to_play/Movement"]
position = Vector2(185, 408)
scale = Vector2(2, 2)
texture = ExtResource("8_kaxbk")

[node name="Label" type="Label" parent="How_to_play/Movement"]
offset_left = 328.0
offset_top = 343.0
offset_right = 613.0
offset_bottom = 419.0
scale = Vector2(0.6, 0.6)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("9_0nobx")
theme_override_font_sizes/font_size = 95
text = "Movement"

[node name="Paused" type="Node2D" parent="How_to_play"]
position = Vector2(50, -244)

[node name="Esc" type="Sprite2D" parent="How_to_play/Paused"]
position = Vector2(187, 518)
scale = Vector2(2, 2)
texture = ExtResource("10_iyrh0")

[node name="Label" type="Label" parent="How_to_play/Paused"]
offset_left = 288.0
offset_top = 489.0
offset_right = 573.0
offset_bottom = 565.0
scale = Vector2(0.6, 0.6)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("9_0nobx")
theme_override_font_sizes/font_size = 95
text = "Pause"

[node name="Dash" type="Node2D" parent="How_to_play"]
position = Vector2(120, -45)

[node name="Shift" type="Sprite2D" parent="How_to_play/Dash"]
position = Vector2(187, 625)
scale = Vector2(2, 2)
texture = ExtResource("11_8jgmr")

[node name="Label" type="Label" parent="How_to_play/Dash"]
offset_left = 298.0
offset_top = 593.0
offset_right = 583.0
offset_bottom = 669.0
scale = Vector2(0.6, 0.6)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("9_0nobx")
theme_override_font_sizes/font_size = 95
text = "Dash"

[node name="Action" type="Node2D" parent="How_to_play"]
position = Vector2(95, -100)

[node name="Label2" type="Label" parent="How_to_play/Action"]
offset_left = 588.0
offset_top = 344.0
offset_right = 945.0
offset_bottom = 420.0
scale = Vector2(0.6, 0.6)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("9_0nobx")
theme_override_font_sizes/font_size = 95
text = "Left Click:"

[node name="Label3" type="Label" parent="How_to_play/Action"]
offset_left = 847.0
offset_top = 344.0
offset_right = 1204.0
offset_bottom = 420.0
scale = Vector2(0.6, 0.6)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("9_0nobx")
theme_override_font_sizes/font_size = 95
text = "Action"

[node name="BackButton" type="Button" parent="How_to_play"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
offset_left = 115.0
offset_top = 77.0
offset_right = 179.0
offset_bottom = 141.0
theme = ExtResource("3_lsdqh")
text = "„Åè"
